web content update

--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
                   <span class="sub-title1 sec-bg2 rounded-6 p-8-12 text-18 leading-18 inline-block sub-text1 uppercase mb-20 font-medium">About</span>
                   <h2 class="black1 text-44 sm:text-30 md:text-30 leading-44 font-semibold text-anime-style-3">Nexon Consulting</h2>
                   <p class="mt-16 text-18 leading-26 font-medium gray1" style="text-align: justify;">At Nexon, we take pride in our team of seasoned financial consultants, dedicated to guiding clients through their financial journeys.</p><br>
-                  <p style="text-align: justify;">Nexon has established a robust presence in the Middle East, serving clients with tailored financial solutions and expert consultancy. Our regional offices are strategically located in key financial hubs, ensuring that we are well-positioned to meet the diverse needs of our clients. We are committed to fostering long-term relationships and driving financial success through our deep understanding of the local market dynamics and regulatory landscape. Our team of seasoned professionals brings a wealth of experience and a personalized approach to wealth management, investment strategies, and risk management. We are dedicated to empowering our clients to achieve their financial goals and secure a prosperous future.</p>
+                  <p class="mt-16 text-18 leading-26 font-medium gray1" style="text-align: justify;">Nexon has established a robust presence in the Middle East, serving clients with tailored financial solutions and expert consultancy. Our regional offices are strategically located in key financial hubs, ensuring that we are well-positioned to meet the diverse needs of our clients. We are committed to fostering long-term relationships and driving financial success through our deep understanding of the local market dynamics and regulatory landscape. Our team of seasoned professionals brings a wealth of experience and a personalized approach to wealth management, investment strategies, and risk management. We are dedicated to empowering our clients to achieve their financial goals and secure a prosperous future.</p>
                   <br>
                   <!-- <p>As a team of highly qualified professionals and seasoned bankers, we take pride in what we do. Our lead advisors have years of experience helping clients to better manage and plan their wealth.</p> -->
                   <div class="mt-30">
@@ -409,7 +409,7 @@
             <div class="row align-items-center">
                <div class="col-lg-12 text-center">
                   <div class="heading"> 
-                     <h2 class="white1 text-44 md:text-30 sm:text-30 leading-44 font-semibold text-anime-style-3">We Are Waiting, Let’s Get Started Now!</h2>
+                     <h2 class="white1 text-44 md:text-30 sm:text-30 leading-44 font-semibold text-anime-style-3">Waiting for? Let’s Get Started Now!</h2>
                      <p class="white-gray1 text-20 leading-28 mt-16 font-medium">Our goal is simple: To ensure highly qualified professionals are on hand to safeguard all aspects of your financial situation and to help achieve your financial goals.</p>
                      <br>
                      <button class="theme-btn1"><span class="text">Contact Us</span><span class="arrow-all"><span class="arrow1"><i class="fa-regular fa-arrow-right"></i></span><span class="arrow2"><i class="fa-regular fa-arrow-right"></i></span></span></button>
@@ -482,7 +482,7 @@
                            <img src="assets/img/icons/footer1-icon2.svg" alt="">
                         </div>
                         <div class="text">
-                           <a href="#" class="ml-10 gray2 inline-block p-10-0 text-18 leading-18 text _hover1 font-medium">216, Churchill Executive Tower, Dubai - UAE</a>
+                           <a href="#" class="ml-10 gray2 inline-block p-10-0 text-18 leading-18 text _hover1 font-medium">215, Churchill Executive Tower, Business Bay. Dubai - UAE</a>
                         </div>
                      </div>
 
