--- a/contact.html
+++ b/contact.html
@@ -343,7 +343,7 @@
                <div class="col-lg-6">
                   <div class="cta1-form _relative z-3">
                      <input type="email" placeholder="Email Address">
-                     <button class="theme-btn1"><span class="text">Subscribe</span><span class="arrow-all"><span class="arrow1"><i class="fa-regular fa-arrow-right"></i></span><span class="arrow2"><i class="fa-regular fa-arrow-right"></i></span></span></button>
+                     <button class="theme-btn1"><span class="text">Subscribe</span></button>
                   </div>
                </div>
             </div>
@@ -413,7 +413,7 @@
                            <img src="assets/img/icons/footer1-icon2.svg" alt="">
                         </div>
                         <div class="text">
-                           <a href="#" class="ml-10 gray2 inline-block p-10-0 text-18 leading-18 text _hover1 font-medium">216, Churchill Executive Tower, Dubai - UAE</a>
+                           <a href="#" class="ml-10 gray2 inline-block p-10-0 text-18 leading-18 text _hover1 font-medium">215, Churchill Executive Tower, Business Bay. Dubai - UAE</a>
                         </div>
                      </div>
 
