--- a/insurance.html
+++ b/insurance.html
@@ -240,7 +240,7 @@
          <div class="row align-items-center">
             <div class="col-lg-12 text-center">
                <div class="heading"> 
-                  <h2 class="white1 text-44 md:text-30 sm:text-30 leading-44 font-semibold text-anime-style-3">We Are Waiting, Let’s Get Started Now!</h2>
+                  <h2 class="white1 text-44 md:text-30 sm:text-30 leading-44 font-semibold text-anime-style-3">Waiting for? Let’s Get Started Now!</h2>
                   <p class="white-gray1 text-20 leading-28 mt-16 font-medium">Our goal is simple: To ensure highly qualified professionals are on hand to safeguard all aspects of your financial situation and to help achieve your financial goals.</p>
                   <br>
                   <button class="theme-btn1"><span class="text">Contact Us</span><span class="arrow-all"><span class="arrow1"><i class="fa-regular fa-arrow-right"></i></span><span class="arrow2"><i class="fa-regular fa-arrow-right"></i></span></span></button>
@@ -313,7 +313,7 @@
                            <img src="assets/img/icons/footer1-icon2.svg" alt="">
                         </div>
                         <div class="text">
-                           <a href="#" class="ml-10 gray2 inline-block p-10-0 text-18 leading-18 text _hover1 font-medium">216, Churchill Executive Tower, Dubai - UAE</a>
+                           <a href="#" class="ml-10 gray2 inline-block p-10-0 text-18 leading-18 text _hover1 font-medium">215, Churchill Executive Tower, Business Bay. Dubai - UAE</a>
                         </div>
                      </div>
 
