--- a/contact.html
+++ b/contact.html
@@ -75,12 +75,12 @@
             <div class="header1-top md:pb-0 sm:pb-0 d-none d-lg-block" id="msgDiv">
                <div class="row">
                   <div class="col-lg-6">
-                     <p class="black1 font-18 black2 leading-18 font-medium">Connect with our expert today for a free Consultation.  <a href="contact.html" class="black2 font-18 leading-18 font-medium inline-block text _hover1 underline">Contact Us</a></p>
+                     <p class="white1 font-18 black2 leading-18 font-medium">Connect with our expert today for a free Consultation.  <a href="contact.html" class="white1 font-18 leading-18 font-medium inline-block text _hover1 underline">Contact Us</a></p>
                   </div>
                   <div class="col-lg-6">
                      <div class="header-contact-wedget">
-                        <a href="mailto:info@nexonconsulting.com" class="black2 font-18 leading-18 font-medium inline-block text _hover1"><img src="assets/img/icons/header-contact1.svg" alt=""> info@nexonconsulting.com</a>
-                        <a href="tel:+971 04 529 7820" class="black2 ml-30 font-18 leading-18 font-medium inline-block text _hover1"><img src="assets/img/icons/header-contact2.svg" alt=""> +971 04 529 7820</a>
+                        <a href="mailto:info@nexonconsulting.com" class="white1 font-18 leading-18 font-medium inline-block text _hover1"><img src="assets/img/icons/header-contact1.svg" style="background-color: white;border-radius: 5px;"> info@nexonconsulting.com</a>
+                        <a href="tel:+971 04 529 7820" class="white1 ml-30 font-18 leading-18 font-medium inline-block text _hover1"><img src="assets/img/icons/header-contact2.svg" style="background-color: white;border-radius: 5px;"> +971 04 529 7820</a>
                      </div>
                   </div>
                </div>
