--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                <div class="row align-items-center">
                   <div class="col-lg-6">
                      <div class="heading mt-50 md:mt-100 sm:mt-100 _relative z-9">
-                        <span class="sub-title text-18 leading-18 flex white1 uppercase mb-20 font-medium"><img src="assets/img/icons/n-logo.png" alt=""> Delivering Results That Matter</span>
+                        <span class="sub-title text-18 leading-18 flex white1 uppercase mb-20 font-medium"><img src="assets/img/icons/icon.png" alt=""> Delivering Results That Matter</span>
                         <h1 class="text-56 md:text-40 sm:text-40 leading64 inline-block white1 font-semibold">"Your Trusted Partner in Strategic Growth with Expertise and Experience"</h1>
                         <p class="mt-16 text-18 leading-26 inline-block white1">We specialize in providing tailored consulting services that <br> drive success an transformation for businesses of all sizes.</p>
                         <div class="button mt-30">
